services/drupal/web/themes/epa_theme/source/_patterns/05-components/definition/_definition.scss
// @file
// Styles for a Definition.

.definition {
  cursor: help;

  &:hover,
  &:focus-within {
    .definition__tooltip {
      display: block;
    }
  }
}

.definition__trigger {
  @extend .usa-button--unstyled;
  border-bottom: 1px dotted;
  position: relative;
  text-decoration: none;

  &:hover,
  &:focus {
    text-decoration: none;

    + .definition__tooltip {
      display: block;
    }
  }
}

.definition__tooltip {
  background: gesso-brand(blue, dark-1);
  color: gesso-grayscale(white);
  display: none;
  font-size: font-size(body, xs);
  margin-top: rem(-3px);
  max-width: rem(960px);
  padding: gesso-spacing(2);
  position: absolute;

  a {
    @extend %dark-bg-link;
  }
}

.definition__term {
  color: gesso-brand(aqua, base);
  display: block;
  font-family: font-family(heading);
  font-size: font-size(heading, md);
  font-weight: gesso-bold(bold);
  margin-bottom: gesso-spacing(1);
}

